applications/sophie-foundation/resources/redis.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: redis
  annotations:
    argocd.argoproj.io/sync-wave: "0"

spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: sophie-redis
  template:
    metadata:
      labels:
        app: sophie-redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:8.10.2@sha256:7ef5b5cec96495a04ca7feff88a9492efeab8053fb284d24bdd73344c9245a48
          args: ["redis-server", "--appendonly", "yes"]
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - name: data
              mountPath: /data
      securityContext:
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: beryllium-nfs
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service

metadata:
  name: redis

spec:
  selector:
    app: sophie-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
